# tune-streamer-backend

./: .gitignore  Cargo.toml  Dockerfile
db/: database.db
src/: main.rs
src/handlers/: mod.rs  music_handler.rs  playlist_handler.rs  user_handler.rs
src/middleware/: authentication.rs
src/models/: mod.rs  music_model.rs  playlist_model.rs  user_model.rs
src/routes/: mod.rs  playlist_route.rs  song_route.rs  user_route.rs
src/services/: mod.rs  music_service.rs  playlist_service.rs  user_service.rs
src/utils/: error.rs  load_music.rs  logging.rs  mod.rs
